<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/newRecipeHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_headline"
        />
    <TextView
        android:id="@+id/new_recipe_recipe_title_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_recipe_title"
        android:layout_below="@+id/newRecipeHeadline"
        />
    <EditText
        android:id="@+id/newRecipeEditRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_recipe_recipe_title"
        android:layout_below="@+id/new_recipe_recipe_title_headline"
        android:inputType="textPersonName"
        />
    <TextView
        android:id="@+id/newRecipeIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_recipe_ingredients"
        android:layout_below="@+id/newRecipeEditRecipeTitle"
        />
    <EditText
        android:id="@+id/newRecipeEditIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_recipe_new_ingredient"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPersonName"
        android:layout_below="@+id/newRecipeIngredients"
        />
    <Button
        android:id="@+id/newRecipeButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_add_button"
        android:layout_alignBottom="@+id/newRecipeEditIngredients"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />
    <ListView
        android:id="@+id/newRecipeList"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/newRecipeEditIngredients">
    </ListView>
    <TextView
        android:id="@+id/newRecipeDescriptionHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_recipe_description"
        android:layout_below="@+id/newRecipeList"
        />
    <EditText
        android:id="@+id/newRecipeEditRecipeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_recipe_recipe_description"
        android:layout_below="@+id/newRecipeDescriptionHeadline"
        android:inputType="textPersonName"
        />
    <Button
        android:id="@+id/newRecipeButtonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_button_save"
        android:layout_below="@+id/newRecipeEditRecipeDescription"
        />

</RelativeLayout>
